--- a/app/views/eliza/index.js.erb
+++ b/app/views/eliza/index.js.erb
@@ -2,14 +2,14 @@
 $('theConversation').insert( { bottom: "<%= raw(patient_response(@userStatement)) %>" } ); 
 $('theConversation').insert( { bottom: "<%= raw(eliza_response(@elizaResponse)) %>" } ); 
 
-//$('theConversation').insert( { bottom: "<%= raw(@elizaResponse) %>" } ); 
-
 // Element.hide('processing-indicator');
 $('form-submit-button').disabled = false;	
 inputText = $('inputTextBox');
 inputText.value = '';
 inputText.focus();
 
+// if set to value greater than it can be scrolled, then set to the maximum
+$('theConversation').scrollTop = 10000000;
 
 
 
