--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eliza3</title>
+  <title><%= @pagename %></title>
   <%= stylesheet_link_tag :all %>
 	<%= stylesheet_link_tag "eliza", :media =>"all" %>
   <%= javascript_include_tag :defaults %>
