--- a/app/views/eliza/index.html.erb
+++ b/app/views/eliza/index.html.erb
@@ -1,14 +1,13 @@
 <div id="content">
-	<div class="pageTitle">Eliza</div>	
-  <%= form_tag('/', :remote => true, :id => 'elizaform', :class => 'samform') do %>
-
-	<div class="conversationContainer" id="theConversation">	
-		<%= raw(eliza_response(@conversation)) %>
-	</div>
-	<div class="buttons">
-		<%= text_field_tag :newStatement, '' , :id => 'inputTextBox' %>
-		<%= submit_tag("Enter", :disable_with => "Please wait...", :id => 'form-submit-button', :class => 'samform')  %> &nbsp; 
-		<%= image_tag("indicator.gif", :id =>"processing-indicator", :style =>"display:none;", :height => 16, :width => 16) %>
-	</div>
+	<div class="pageTitle">Eliza</div>
+	<%= form_tag('/eliza/index', remote: true, id: 'elizaform', class: 'samform') do %>
+	  <div class="conversationContainer" id="theConversation">
+	    <%= raw(eliza_response(@conversation)) %>
+	  </div>
+	  <div class="buttons">
+	    <%= text_field_tag :newStatement, '' , id: 'inputTextBox' %>
+	    <%= submit_tag("Enter", :disable_with => "Please wait...", :id => 'form-submit-button', :class => 'samform')  %> &nbsp; 
+	    <%= image_tag("indicator.gif", :id =>"processing-indicator", :style =>"display:none;", :height => 16, :width => 16) %>
+	  </div>
   <% end %>
 </div>
