--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= @pagename %></title>
-  <%= stylesheet_link_tag :all %>
-	<%= stylesheet_link_tag "eliza", :media =>"all" %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-<div id="credits">Based on Peter Norvig's <a href="http://www.norvig.com/paip/README.html">LISP implementation</a></div>
-
-</body>
+  <head>
+    <title><%= @pagename %></title>
+    <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
+  <body>
+    <%= yield %>
+    <div id="credits">Based on Peter Norvig's <a href="http://www.norvig.com/paip/README.html">LISP implementation</a></div>
+    </body>
 </html>
